Fixed meet the team causing overflow and card sizes.

--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -408,18 +408,18 @@ h1, h2, h3, h4, h5, h6 {
 
 
 .be-meet-the-team {
-  padding: 1rem;
+  // padding: 1rem;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  width: 100%;
+  width: calc(100% - 2rem);
   max-width: 50rem;
 }
 
 .be-meet-container {
-  max-width: 15rem;
+  // max-width: 15rem;
   text-align: center;
   flex-basis: 40%;
   margin: 1rem 0.5rem;
@@ -441,9 +441,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .be-meet-card {
+  min-width: 15rem;
   // max-width: 15rem;
   font-size: 1em;
-  padding: 4rem 0.5rem 0.5rem 0.5rem;
+  padding: 4rem 1rem 1rem 0.5rem;
   background: #eee;
   border-radius: 10px;
   margin-top: -5rem;
@@ -643,6 +644,17 @@ h1, h2, h3, h4, h5, h6 {
   html, body {
     font-size: 150%;
   }
+  
+  // need to make it after.
+  // .be-header-container::before {
+  //   content: '';
+  //   display: block;
+  //   position: absolute;
+  //   width: 100%;
+  //   height: 100%;
+  //   top: 0;
+  //   background-color: grey;
+  // }
   
   .be-header {
     background-image: url('../images/beInfluence-h-1200.jpg');
